Add option to use VP9 instead of H.264

--- a/pages/options.html
+++ b/pages/options.html
@@ -10,6 +10,8 @@
         <input type="checkbox" id="5.1">Use 5.1 audio when available</input>
         <br>
         <input type="checkbox" id="setMaxBitrate">Automatically select best bitrate available</input>
+        <br>
+        <input type="checkbox" id="useVP9">Use VP9 instead of H.264</input>
     </label>
 
     <div id="status"></div>
