Fix label->checkbox assignment
Previously, all the text for all options was incorrectly marked as the
label of the first checkbox. As a result, clicking on any of the text
would *confusingly* toggle the 5.1 audio option. This commit assigns
each label to an individual checkbox -- each checkbox can be toggled by
clicking on its respective option.

--- a/pages/options.html
+++ b/pages/options.html
@@ -7,11 +7,18 @@
 
 <body>
     <label>
-        <input type="checkbox" id="5.1">Use 5.1 audio when available</input>
-        <br>
-        <input type="checkbox" id="setMaxBitrate">Automatically select best bitrate available</input>
-        <br>
-        <input type="checkbox" id="useVP9">Use VP9 instead of H.264</input>
+        <input type="checkbox" id="5.1" />
+        Use 5.1 audio when available
+    </label>
+    <br>
+    <label>
+        <input type="checkbox" id="setMaxBitrate" />
+        Automatically select best bitrate available
+    </label>
+    <br>
+    <label>
+        <input type="checkbox" id="useVP9" />
+        Use VP9 instead of H.264
     </label>
 
     <div id="status"></div>
